--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -1,10 +1,11 @@
-###.github/workflows/terraform.yml
-name: Terraform: Bootstrap + Provision Infrastructure
+name: Create S3 Bucket + Provision EC2 Instance
 
 on:
   push:
     branches:
       - main
+      - staging
+      - master
     paths:
       - 'bootstrap/**'
       - 'infra/**'
@@ -36,7 +37,20 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ env.AWS_REGION }}
 
+      - name: Check if S3 bucket exists
+        id: check_bucket
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_REGION: ${{ secrets.AWS_REGION }}
+        run: |
+            if aws s3api head-bucket --bucket "realcloud-tfstate-bucket-001" 2>/dev/null; then
+              echo "exists=true" >> $GITHUB_ENV
+            else
+              echo "exists=false" >> $GITHUB_ENV
+            fi
       - name: Init & Apply Bootstrap
+        if: steps.check_bucket.outputs.exists == 'false'
         working-directory: bootstrap
         run: |
           terraform init
@@ -64,28 +78,38 @@ jobs:
           aws-region: ${{ env.AWS_REGION }}
 
       - name: Terraform Init (with backend)
-        working-directory: infra
-        run: terraform init -backend-config="bucket=${{ env.BUCKET_NAME }}" \
-                             -backend-config="key=${{ env.TF_KEY }}" \
-                             -backend-config="region=${{ env.AWS_REGION }}"
-
-      - name: Terraform Apply
-        working-directory: infra
-        run: terraform apply -auto-approve -input=false
-
-      - name: Save Private Key to Artifact
-        working-directory: infra
         run: |
-          mkdir -p tf-artifacts
-          terraform output -raw private_key_pem > tf-artifacts/ec2_key.pem
-          chmod 600 tf-artifacts/ec2_key.pem
+          terraform -chdir=infra init \
+            -backend-config="bucket=realcloud-tfstate-bucket-001" \
+            -backend-config="key=ec2-infra/terraform.tfstate" \
+            -backend-config="region=us-east-1"
 
-      - name: Upload SSH Key Artifact
-        uses: actions/upload-artifact@v3
-        with:
-          name: ec2-private-key
-          path: infra/tf-artifacts/ec2_key.pem
-NOTE:::
-The SSH private key is uploaded as a workflow artifact.
+      - name: Terraform Destroy
+        working-directory: infra
+        run: terraform destroy -auto-approve -input=false || true
 
-You can download it from the Actions tab → Job → Artifacts after a run
+#      - name: Terraform Apply
+#        working-directory: infra
+#        run: terraform apply -auto-approve -input=false
+#
+#      - name: Create A Dir
+#        working-directory: infra
+#        run: |
+#            mkdir -p tf-artifacts
+#            mkdir -p tf-artifacts/public
+#            terraform output -raw private_key_pem > tf-artifacts/ec2_key.pem
+#            chmod 600 tf-artifacts/ec2_key.pem
+#            terraform output -raw public_key_openssh > tf-artifacts/public/ec2_key.pub
+#            chmod 644 tf-artifacts/ec2_key.pub
+#
+#      - name: Upload SSH Private Key as Artifact
+#        uses: actions/upload-pages-artifact@v3
+#        with:
+#          name: ec2-private-key
+#          path: infra/tf-artifacts/
+#
+#      - name: Upload SSH Public Key as Artifact
+#        uses: actions/upload-pages-artifact@v3
+#        with:
+#          name: ec2-public-key
+#          path: infra/tf-artifacts/public
