--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -40,12 +40,12 @@ jobs:
       - name: Check if S3 bucket exists
         id: check_bucket
         run: |
-          if aws s3api head-bucket --bucket "${BUCKET_NAME}" 2>/dev/null; then
+          if aws s3api head-bucket --bucket "${{ env.BUCKET_NAME }}" 2>/dev/null; then
             echo "exists=true" >> $GITHUB_ENV
-            echo "::set-output name=exists::true"
+            echo "exists=true" >> $GITHUB_OUTPUT
           else
             echo "exists=false" >> $GITHUB_ENV
-            echo "::set-output name=exists::false"
+            echo "exists=false" >> $GITHUB_OUTPUT
           fi
 
       - name: Init & Apply Bootstrap
@@ -79,9 +79,9 @@ jobs:
       - name: Terraform Init (with backend)
         run: |
           terraform -chdir=infra init \
-            -backend-config="bucket=${BUCKET_NAME}" \
-            -backend-config="key=${TF_KEY}" \
-            -backend-config="region=${AWS_REGION}"
+            -backend-config="bucket=${{ env.BUCKET_NAME }}" \
+            -backend-config="key=${{ env.TF_KEY }}" \
+            -backend-config="region=${{ env.AWS_REGION }}"
 
       - name: Terraform Destroy
         working-directory: infra
@@ -99,7 +99,7 @@ jobs:
 #            terraform output -raw private_key_pem > tf-artifacts/ec2_key.pem
 #            chmod 600 tf-artifacts/ec2_key.pem
 #            terraform output -raw public_key_openssh > tf-artifacts/public/ec2_key.pub
-#            chmod 644 tf-artifacts/ec2_key.pub
+#            chmod 644 tf-artifacts/public/ec2_key.pub
 #
 #      - name: Upload SSH Private Key as Artifact
 #        uses: actions/upload-pages-artifact@v3
